hphp/test/zend/bad/Zend/tests/bug61681.php
<?php
$la = "ooxx";

echo "${substr('laruence', 0, 2)}"; 

?>